finish get serverList
